--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 REACT_APP_INFURA_KEY="4bf032f2d38a4ed6bb975b80d6340847"
+REACT_APP_NODE_ENV="development"
+REACT_APP_SERVER_PORT=3039
+REACT_APP_SERVER_URL="http://localhost"
