--- a/package.json
+++ b/package.json
@@ -168,5 +168,10 @@
     ]
   },
   "license": "GPL-3.0-or-later",
-  "dependencies": {}
+  "dependencies": {
+    "loglevel": "^1.8.0",
+    "chalk": "^3.0.0",
+    "loglevel-plugin-prefix": "^0.8.4",
+    "socket.io-client": "^4.4.1"
+  }
 }
