--- a/package.json
+++ b/package.json
@@ -169,9 +169,13 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "loglevel": "^1.8.0",
     "chalk": "^3.0.0",
+    "dayjs": "^1.10.4",
+    "lightweight-charts": "^3.7.0",
+    "loglevel": "^1.8.0",
     "loglevel-plugin-prefix": "^0.8.4",
+    "numbro": "^2.3.6",
+    "recharts": "^2.1.8",
     "socket.io-client": "^4.4.1"
   }
 }
